# plenario_virtual

./: .gitignore  .~lock.LISTA DE GRÁFICOS.docx#  CONTEXTO_DADOS.md  IMPLEMENTACAO_GRAFICA.md  LICENSE  LISTA DE GRÁFICOS.docx  README.md  pyproject.toml  requirements.txt
.amazonq/rules/memory-bank/: guidelines.md  product.md  structure.md  tech.md
.streamlit/: config.toml
app/: 2026.07.19 Graficos_narrativa_descricao.md  COMPLETA GRÁFICOS .docx  Codigos_graficos_completos.py  DATA_LAYER.md  Especificacoes_graficos_Joao.md  NOVOS_GRAFICOS.md  NOVOS_GRAFICOS_ACERVO.md  PROJECT_STRUCTURE.md  __init__.py  __main__.py  _bootstrap.py  app.py  bootstrap.py  config.py  data_loader.py  estilo.py  exemplo.md  geral.md  graficos.txt  graficos_possiveis.md  requirements.txt  sessoes_virtuais.md  sustentacao_oral.md  tema.py
app/components/: filters.py
app/dados/: __init__.py  correcao_tipo_questao_2016_2019.csv  filters.py  loader.py
app/data/: __init__.py  data_loader.py  filters.py  loader.py
app/pages/: 01_visao_geral.py  acervo.py  andamentos.py  decisoes.py  deslocamentos.py
app/pages/acervo/: acervo.py  layout.py  plots.py  test_plots.py
app/pages/bloco1_acervo/: bloco1_acervo.py  layout.py  plots.py
app/pages/bloco2_inclusoes/: bloco2_inclusoes.py  layout.py  plots.py
docs/: LISTA_DE_GRAFICOS_controle.md  data_dictionary.md  filters.md  plano_organizacao_pagina.md
notebooks/01_etl/: 01_limpeza_preprocessing.ipynb  pontos_a_serem_abordados.txt
scripts/: upload_hf.py
src/: __init__.py  cleaning.py  filters.py  json_transforme.py  viz.py
(+23 files in other folders)
