[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stf-plenario-virtual"
version = "0.2.0"
description = "Dashboard e pipeline de análise do Plenário Virtual do STF (jurimetria)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Projeto STF Plenário Virtual"}
]
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "streamlit>=1.35.0",
    "plotly>=5.20.0",
]

[project.optional-dependencies]
hf = [
    "huggingface-hub>=0.20.0",
    "datasets>=2.18.0",
]
dev = [
    "jupyter",
    "ipykernel",
    "matplotlib",
    "seaborn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*"]

# stf-etl entry point volta quando src/ existir de fato (ver docs/superpowers/specs)
# [project.scripts]
# stf-etl = "src.cleaning:_cli"

# After `pip install -e .` you can do clean imports:
#   from src.cleaning import run_pipeline
#   from app.data_loader import load_andamentos
#   streamlit run app/app.py   (no sys.path hacks needed)